src/assets/general-styles.scss
@import url('https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,800,900');
@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
@import "mixins";
@import "variables";

* {
  font-family: 'Raleway', sans-serif;
}

.mat-icons {
  @include mat-icon-font();
}

html, body {
  margin: 0;
  padding: 0;
}

nav {
  overflow: hidden;
}

h1 {
  font-weight: 200;
  font-size: 33px;
}
h4 {
  font-weight: 800;
  font-size: 14px;
}

p {
  line-height: 1.5em;
}

textarea {
  resize: vertical;
  line-height: 1.5em;
}

input, textarea {
  padding: 15px;
  font-size: 14px;
  outline: none;
  @include box-sizing(border-box);
}

.btn-default {
  padding: 10px;
  margin: 0 10px;
  min-width: 100px;
  @include border-radius(25px);
  border: 1px solid black;
  outline: none;
  background-color: $primary-lt;

  &:hover, &.selected {
    background-color: $primary-md;
  }
  &:active {
    background-color: $primary-dk;
  }
}

